v0.8.0 add Exchanges endpoint, get TOP cryptocurrencies
