# app.js
@@ -7,6 +7,7 @@ const authRouter = require("./routes/auth");
 const reviewRouter = require("./routes/api/review");
 const transactionRouter = require("./routes/api/transaction");
 const captchaRouter = require("./routes/api/captcha");
+const tickerRouter = require("./routes/api/ticker");
 
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
@@ -28,6 +29,8 @@ app.use("/api/review", reviewRouter);
 app.use("/api/transactions", transactionRouter);
 
 app.use("/captcha", captchaRouter);
+
+app.use("/api/ticker", tickerRouter);
 
 app.use((req, res) => {
   res.status(404).json({ message: "Not found" });
